responsive CSS changes to updated template #2

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 <p>Quiet Whole House Fans Slash Your A/C Costs Up To 50-90%</p>
             </div>
             <form>
-                <input type="text" value="Full Name">
-                <input type="text" value="Email">
-                <input type="text" value="Phone Number">
-                <input type="text" value="Zip Code">
+                <input type="text" placeholder="Full Name">
+                <input type="text" placeholder="Email">
+                <input type="text" placeholder="Phone Number">
+                <input type="text" placeholder="Zip Code">
             </form>
             <button class="submit-form-btn">Get QuietCool Now!</button>
         </div>
